fix for shop on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ div.slick-active {
 
 section#buy {
   text-align: center;
-   bottom: -20px;
+
 }
 
 section#buy a {
